--- a/samples/riddles.yaml
+++ b/samples/riddles.yaml
@@ -1,4 +1,14 @@
 version: 2
+description: >-
+  This agent helps you solve riddles! It is an example of a "take over" agent in
+  Watson Assistant, i.e. an agent which, given a certain trigger, can take
+  control of an entire conversation.
+
+
+  When the user says "Watson, ask me a riddle", this agent will respond
+  accordingly and begin to supply custom annotations for subsequent
+  interactions. It maintains its own gameplay logic until the user exists the
+  game.
 concepts:
   - name: 'riddle:Stop'
   - name: 'riddle:Message'
