--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,7 @@
 theme: jekyll-theme-minimal
-includes_dir: _includes
+analytics:
+  provider: "google-gtag"
+  google:
+    tracking_id: "UA-1234567-8"
+    anonymize_ip: false # default
+
