--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ title: Watson Embedded Business Assistant
 description: This is the public home of the Watson Embedded Business Assistant (“EBA”). EBA is an AI framework comprised of a proprietary machine reasoning core, generic & industry domain-specific business agents, and an interactive user experience.
 google_analytics: UA-122581302-1
 show_downloads: true
-logo: https://avatars2.githubusercontent.com/u/40904555?s=200&v=4
+#logo: https://avatars2.githubusercontent.com/u/40904555?s=200&v=4
