--- a/samples/walmart.yaml
+++ b/samples/walmart.yaml
@@ -1,24 +1,37 @@
-version: 2
-description: |+
+version: 3
+description: >+
   Demo agent based on [Walmart Open API](https://developer.walmartlabs.com)
 
+
   You can try questions like:
+
   - what's trending now?
+
   - show me popular products
+
   - show me top 5 of these products
+
   - show me price for the first of them
+
   - show me top 5 popular products sorted by price
+
   - what is average price for them?
+
   - what is description sentiment for the first product?
+
   - show me popular products with negative description
+
   - show me popular products with positive description
-  - notify me if price of product "Maverix Monster Electric Skateboard" is less than $50
+
+  - notify me if price of product "Maverix Monster Electric Skateboard" is less
+  than $50
+
   - show me product with UPC 647627503349
+
   - what is product name for UPC 647627503349?
 
-settings:
+secrets:
   - name: apiKey
-    value: your-api-key-here
     notes: 'Get your API key at https://developer.walmartlabs.com/'
 concepts:
   - name: ':Number'
@@ -70,13 +83,13 @@ concepts:
       isListOf: 'wmt:Product'
       subClassOf: ':Showable'
 patterns:
-  - 'what is product name for {UPC|:UPC} 1234'
-  - '{what''s|:What} {trending now|wmt:TrendingNow}'
-  - 'show {price|wmt:SalePrice} for this product'
-  - 'show {msrp|wmt:MSRP} for this product'
-  - 'what is {description|wmt:Description} for this product?'
-  - 'show {trending|wmt:Trending} {products|wmt:Products}'
-  - 'show {popular|wmt:Trending} products'
+  - text: 'what is product name for {UPC|:UPC} 1234'
+  - text: '{what''s|:What} {trending now|wmt:TrendingNow}'
+  - text: 'show {price|wmt:SalePrice} for this product'
+  - text: 'show {msrp|wmt:MSRP} for this product'
+  - text: 'what is {description|wmt:Description} for this product?'
+  - text: 'show {trending|wmt:Trending} {products|wmt:Products}'
+  - text: 'show {popular|wmt:Trending} products'
 actions:
   - name: 'wmt:SearchProductByUPC'
     signature: 'wmt:Product (optional :UPC (data :Number)) -> data wmt:Product'
@@ -90,7 +103,7 @@ actions:
         let upc = h.get(":Number")
 
         return request
-          .get(`http://api.walmartlabs.com/v1/items?apiKey=${params.settings.apiKey}&upc=${encodeURIComponent(upc)}`)
+          .get(`http://api.walmartlabs.com/v1/items?apiKey=${params.secrets.apiKey}&upc=${encodeURIComponent(upc)}`)
           .then(JSON.parse)
           .then(({items}) => {
             let item = items[0]
@@ -119,7 +132,7 @@ actions:
         let nameString = h.get(":UserString")
 
         return request
-          .get(`http://api.walmartlabs.com/v1/search?apiKey=${params.settings.apiKey}&query=${encodeURIComponent(nameString)}`)
+          .get(`http://api.walmartlabs.com/v1/search?apiKey=${params.secrets.apiKey}&query=${encodeURIComponent(nameString)}`)
           .then(JSON.parse)
           .then(({items}) => {
             items.forEach((item) => {
@@ -145,7 +158,7 @@ actions:
         let nameString = h.get(":UserString")
 
         return request
-          .get(`http://api.walmartlabs.com/v1/search?apiKey=${params.settings.apiKey}&query=${encodeURIComponent(nameString)}`)
+          .get(`http://api.walmartlabs.com/v1/search?apiKey=${params.secrets.apiKey}&query=${encodeURIComponent(nameString)}`)
           .then(JSON.parse)
           .then(({items}) => {
             let item = items[0]
@@ -169,9 +182,9 @@ actions:
       const request = require('request-promise-native')
       const eba = require('eba');
 
-      const main = ({settings}) => {
+      const main = ({secrets}) => {
         return request
-          .get(`http://api.walmartlabs.com/v1/trends?apiKey=${settings.apiKey}`)
+          .get(`http://api.walmartlabs.com/v1/trends?apiKey=${secrets.apiKey}`)
           .then(JSON.parse)
           .then(({items}) => {
             items.forEach((item) => {
@@ -206,7 +219,9 @@ endpoints:
         }
       }
 
-      function render(channel, { text, data, name }) {
+      function render(channel, node, data) {
+        let { text, name } = node.data.content
+
         if (channel == "slack") {
           if (name == "wmt:Products") {
             let attachments = data.map(renderProduct)
@@ -226,7 +241,7 @@ endpoints:
       }
 
       module.exports.main = function({ input }) {
-        let result = render(input.channel, input.data)
+        let result = render(input.channel, input.node, input.data)
         if (result) {
           return { output: result }
         } else {
