Set theme jekyll-theme-minimal

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-minimal
 title: Watson Embedded Business Assistant
 google_analytics: UA-122581302-1
 #show_downloads: true
