--- a/samples/Wikipedia.yaml
+++ b/samples/Wikipedia.yaml
@@ -2,7 +2,14 @@ version: 4
 meta:
   icon: 'https://upload.wikimedia.org/wikipedia/en/8/80/Wikipedia-logo-v2.svg'
   name: Wikipedia
-  description: ''
+  description: >-
+    Fallback style agents are agents which can handle questions if no matching
+    Semantic API is found. So you can search knowledge base, describe what your
+    agents can do, call other systems and etc.
+
+
+    This example leverages partial reasoning data and adjusts user questions to
+    improve Wikipedia search query to improve search result relevance.
 concepts:
   - name: 'wikipedia:ArticlesMessage'
     ontology:
