--- a/samples/websocket-node-client/package.json
+++ b/samples/websocket-node-client/package.json
@@ -7,8 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": [
+    "chalk",
     "lodash",
     "request",
     "request-promise",
