--- a/samples/WastonDiscovery.yaml
+++ b/samples/WastonDiscovery.yaml
@@ -38,10 +38,7 @@ endpoints:
         return await util.promisify(discovery.query.bind(discovery))({
           environment_id: params.settings.wds_environment_id,
           collection_id: params.settings.wds_collection_id,
-          natural_language_query: question,
-          filter: question,
-          deduplicate: true,
-          bias: 'publish-date'
+          natural_language_query: question
         })
         .then((response) => {
           console.log(response)
