--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 theme: jekyll-theme-minimal
 title: IBM Embedded Business AI Framework
+description: Explore a new way to craft A.I. solutions using a modern approach to machine reasoning.
 google_analytics: UA-122581302-1
 plugins:
   - jekyll-seo-tag
 #show_downloads: true
-#description: This is the public home of the Watson Embedded Business Assistant (“EBA”). EBA is an AI framework comprised of a proprietary machine reasoning core, generic & industry domain-specific business agents, and an interactive user experience.
 #logo: https://avatars2.githubusercontent.com/u/40904555?s=200&v=4
