--- a/samples/riddles.yaml
+++ b/samples/riddles.yaml
@@ -2,7 +2,7 @@ version: 5
 meta:
   description: >-
     This agent helps you solve riddles! It is an example of a "take over" agent
-    in Watson Assistant, i.e. an agent which, given a certain trigger, can take
+    in EBA, i.e. an agent which, given a certain trigger, can take
     control of an entire conversation.
 
 
