--- a/samples/walmart.yaml
+++ b/samples/walmart.yaml
@@ -29,6 +29,8 @@ meta:
 
     - show me product with UPC 647627503349
 
+    - whats on image for product with UPC 647627503349
+
     - what is product name for UPC 647627503349?
 
   name: Walmart Trends
@@ -36,18 +38,52 @@ secrets:
   - name: apiKey
     notes: 'Get your API key at https://developer.walmartlabs.com/'
 concepts:
-  - name: ':MinimumBy'
-  - name: ':LowValue'
-  - name: 'wmt:Cheap'
+  - name: ':ImgAttribute'
+  - name: 'wmt:ProductImage'
     ontology:
-      isSpellAs: cheap
-  - name: ':MaximumBy'
+      isSpellAs: product image
+      subClassOf:
+        - ':Attribute'
+        - ':ImgAttribute'
   - name: 'wmt:SalePrice'
     ontology:
       isSpellAs: sale price
       subClassOf:
         - ':NumAttribute'
         - ':Attribute'
+  - name: 'wmt:MSRP'
+    ontology:
+      subClassOf:
+        - ':NumAttribute'
+        - ':Attribute'
+      isSpellAs: msrp
+  - name: 'wmt:Description'
+    ontology:
+      subClassOf:
+        - ':StrAttribute'
+        - ':Attribute'
+      isSpellAs: description
+  - name: 'wmt:Product'
+    ontology:
+      subClassOf: ':Showable'
+      isSpellAs: product
+    attributes:
+      'wmt:ProductImage': largeImage
+      'wmt:SalePrice': salePrice
+      ':Name': name
+      'wmt:MSRP': msrp
+      'wmt:Description': shortDescription
+  - name: 'wmt:Products'
+    ontology:
+      subClassOf: ':Showable'
+      isListOf: 'wmt:Product'
+      isSpellAs: products|*
+  - name: ':MinimumBy'
+  - name: ':LowValue'
+  - name: 'wmt:Cheap'
+    ontology:
+      isSpellAs: cheap
+  - name: ':MaximumBy'
   - name: ':HighValue'
   - name: 'wmt:Expensive'
     ontology:
@@ -62,44 +98,18 @@ concepts:
   - name: 'wmt:TrendingNow'
   - name: ':Showable'
   - name: ':NumAttribute'
-  - name: 'wmt:MSRP'
-    ontology:
-      subClassOf:
-        - ':NumAttribute'
-        - ':Attribute'
-      isSpellAs: msrp
   - name: ':Attribute'
   - name: 'wmt:Trending'
   - name: 'wmt:SalePriceValue'
   - name: ':StrAttribute'
   - name: ':What'
-  - name: 'wmt:Description'
-    ontology:
-      subClassOf:
-        - ':StrAttribute'
-        - ':Attribute'
-      isSpellAs: description
   - name: ':Timeframe'
-  - name: 'wmt:Product'
-    ontology:
-      subClassOf: ':Showable'
-      isSpellAs: product
-    attributes:
-      'wmt:SalePrice': salePrice
-      ':Name': name
-      'wmt:MSRP': msrp
-      'wmt:Description': shortDescription
-  - name: 'wmt:Products'
-    ontology:
-      subClassOf: ':Showable'
-      isListOf: 'wmt:Product'
-      isSpellAs: products|*
 patterns: |-
   <!-- for core entities -->
   - show [trending](wmt:Trending) [products](wmt:Products)
   - show [popular](wmt:Trending) products
   - [what's](:What) [trending now](wmt:TrendingNow)
-
+  - show me the [product image|image](wmt:ProductImage) for this product
 
   <!-- for attributes -->
   - what is product name for [UPC](:UPC) 1234
@@ -134,31 +144,6 @@ actions:
             } else {
               return { error: "I haven't found any product" }
             }
-          })
-          .catch((error) => {
-            return { error: `Walmart API error: ${error}` }
-          })
-      }
-  - name: 'wmt:SearchProductsByName'
-    signature: 'wmt:Products (optional :WithName (data :UserString)) -> data wmt:Products'
-    kind: 'nodejs:8'
-    code: |-
-      const request = require('request-promise-native')
-      const eba = require('eba')
-
-      module.exports.main = function (params) {
-        let h = new eba.Params(params)
-        let nameString = h.get(":UserString")
-
-        return request
-          .get(`http://api.walmartlabs.com/v1/search?apiKey=${params.secrets.apiKey}&query=${encodeURIComponent(nameString)}`)
-          .then(JSON.parse)
-          .then(({items}) => {
-            items.forEach((item) => {
-              if (!item.shortDescription)
-                item.shortDescription = ""
-            })
-            return new eba.Result().setData('wmt:Products', items);
           })
           .catch((error) => {
             return { error: `Walmart API error: ${error}` }
@@ -215,6 +200,31 @@ actions:
           })
       }
       module.exports = {main}
+  - name: 'wmt:SearchProductsByName'
+    signature: 'wmt:Products (optional :WithName, data :UserString) -> data wmt:Products'
+    kind: 'nodejs:8'
+    code: |-
+      const request = require('request-promise-native')
+      const eba = require('eba')
+
+      module.exports.main = function (params) {
+        let h = new eba.Params(params)
+        let nameString = h.get(":UserString")
+
+        return request
+          .get(`http://api.walmartlabs.com/v1/search?apiKey=${params.secrets.apiKey}&query=${encodeURIComponent(nameString)}`)
+          .then(JSON.parse)
+          .then(({items}) => {
+            items.forEach((item) => {
+              if (!item.shortDescription)
+                item.shortDescription = ""
+            })
+            return new eba.Result().setData('wmt:Products', items);
+          })
+          .catch((error) => {
+            return { error: `Walmart API error: ${error}` }
+          })
+      }
 rules:
   - name: toMinSalePrice
     signature: 'wmt:Cheap (wmt:Product) -> :MinimumBy (wmt:SalePrice, wmt:Product)'
